--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,12 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
-    <color name="gray">#605E5D</color>
+    <color name="gray">#D8d8d8</color>
     <color name="white">#FFFFFFFF</color>
 
     <color name="stove_orange">#FE4F00</color>
     <color name="stove_purple">#454F89</color>
+
+    <color name="flame_blue">#0884f6</color>
+    <color name="flame_sky_blue">#B0D9FF</color>
 </resources>
