--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="middle_gray">#A1A1A1</color>
     <color name="gray">#D8d8d8</color>
     <color name="white">#FFFFFFFF</color>
 
