--- a/app/src/main/res/layout/activity_oauth.xml
+++ b/app/src/main/res/layout/activity_oauth.xml
@@ -6,4 +6,11 @@
     android:layout_height="match_parent"
     tools:context=".ui.oauth.OAuthActivity">
 
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/btn_google"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
