--- a/app/src/main/res/layout/item_person_four_chat_list.xml
+++ b/app/src/main/res/layout/item_person_four_chat_list.xml
@@ -2,11 +2,13 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="80dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="80dp"
+    android:id="@+id/item_chat">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/layout_image"
+        android:id="@+id/layout_chat_list_image_container"
         android:layout_width="50dp"
         android:layout_height="50dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -16,17 +18,15 @@
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/round_background_border_black"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:background="@drawable/chat_list_round_background"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:translationZ="3dp"
             android:outlineProvider="none"
             >
             <ImageView
-                android:id="@+id/iv_userImg"
+                android:id="@+id/iv_chat_list_user_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="centerInside"
@@ -40,16 +40,15 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/round_background_border_black"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:background="@drawable/chat_list_round_background"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:translationZ="2dp"
-            android:outlineProvider="none"
+            app:layout_constraintTop_toTopOf="parent"
+
             >
             <ImageView
-                android:id="@+id/iv_userImg2"
+                android:id="@+id/iv_chat_list_user_img2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="centerInside"
@@ -63,17 +62,39 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:background="@drawable/round_background_border_black"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:background="@drawable/chat_list_round_background"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            android:translationZ="1dp"
-            android:outlineProvider="none"
+
             >
             <ImageView
-                android:id="@+id/iv_userImg3"
+                android:id="@+id/iv_chat_list_user_img3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:scaleType="centerInside"
+                android:padding="4dp"
+                android:src="@drawable/dummy"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+
+                />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:background="@drawable/chat_list_round_background"
+
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+
+            >
+            <ImageView
+                android:id="@+id/iv_chat_list_user_img4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:scaleType="centerInside"
@@ -90,59 +111,59 @@
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/constraintLayout"
+        android:id="@+id/layout_chat_list_data_container"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/layout_image"
+        app:layout_constraintStart_toEndOf="@id/layout_chat_list_image_container"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/tv_userName"
+            android:id="@+id/tv_chat_list_user_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="김현국"
+            tools:text="김현국"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/tv_userCount"
+            android:id="@+id/tv_chat_list_user_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
-            android:text="4"
-            app:layout_constraintStart_toEndOf="@id/tv_userName"
+            tools:text="4"
+            app:layout_constraintStart_toEndOf="@id/tv_chat_list_user_name"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
-            android:id="@+id/iv_alarmOff"
+            android:id="@+id/iv_chat_list_alarm"
             android:layout_width="15dp"
             android:layout_height="20dp"
             android:layout_marginStart="10dp"
-            android:src="@drawable/ic_artboard_4"
-            app:layout_constraintStart_toEndOf="@id/tv_userCount"
+            android:src="@drawable/ic_alarm"
+            app:layout_constraintStart_toEndOf="@id/tv_chat_list_user_count"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
-            android:id="@+id/tv_lastChatText"
+            android:id="@+id/tv_chat_list_message"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
-            android:text="ㅁㄴㅇㄹㅁㄴㅇㄹㅁㄴㅇ"
+            tools:text="ㅁㄴㅇㄹㅁㄴㅇㄹㅁㄴㅇ"
             android:textSize="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_userName" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_chat_list_user_name" />
 
 
         <TextView
-            android:id="@+id/chatting_room_date"
+            android:id="@+id/tv_chat_list_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="10dp"
-            android:text="오전 09시 30분"
+            tools:text="오전 09시 30분"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
