Add: ChattingRoomFragment with DrawLayout & UserListAdapter from DrawLayout Recyclerview
채팅방 내부 Drawlayout 생성 및 Drawlayout 내부 userList recyclerview 에 대한 adapter 생성

--- a/app/src/main/res/drawable/ic_exit.xml
+++ b/app/src/main/res/drawable/ic_exit.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="32">
   <path
       android:fillColor="#FF000000"
-      android:pathData="M26,30l6,-16h-26l-6,16zM4,12l-4,18v-26h9l4,4h13v4z"/>
+      android:pathData="M24,20v-4h-10v-4h10v-4l6,6zM22,18v8h-10v6l-12,-6v-26h22v10h-2v-8h-16l8,4v18h8v-6z"/>
 </vector>
