--- a/app/src/main/res/layout/item_person_one_chat_list.xml
+++ b/app/src/main/res/layout/item_person_one_chat_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_chat">
+    android:id="@+id/item_chat_list">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_chat_list_image_container"
@@ -16,7 +16,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:cardElevation="0dp"
         app:cardCornerRadius="20dp"
-        android:background="@drawable/chat_list_round_background"
+        android:background="@drawable/bg_chat_list_round"
         >
 
         <ImageView
