--- a/app/src/main/res/drawable/bg_chat_room_left_item.xml
+++ b/app/src/main/res/drawable/bg_chat_room_left_item.xml
@@ -1,18 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/white"/>
+    <solid android:color="#F6F6F6"/>
     <stroke
         android:width="0.5dp"
         android:color="@color/gray">
 
-
-
-
     </stroke>
-
-
     <corners
-         android:radius="11dp"/>
+        android:radius="11dp"/>
+    <padding
+        android:bottom="5dp"
+        android:top="5dp"
+        android:left="5dp"
+        android:right="5dp"/>
 
 
 </shape>
