--- a/app/src/main/res/layout/item_left_start_text_chat_room.xml
+++ b/app/src/main/res/layout/item_left_start_text_chat_room.xml
@@ -1,25 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/item_chat_room">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_chat_room_image_container"
-        android:layout_width="30dp"
-        android:layout_height="30dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:cardElevation="0dp"
         app:cardCornerRadius="20dp"
-        />
+        android:background="@drawable/bg_chat_list_round"
+        >
+
+        <ImageView
+            android:id="@+id/iv_chat_room_user_img"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:padding="4dp"
+            android:scaleType="centerInside"
+            android:src="@drawable/dummy"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
 
 
+
+            />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layout_chat_room_text_container"
@@ -29,8 +43,18 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/layout_chat_room_image_container"
+        android:layout_marginBottom="5dp"
         >
 
+        <TextView
+            android:id="@+id/tv_chat_room_user_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="김현국"
+            android:textStyle="bold"
+            android:textSize="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
 
@@ -40,7 +64,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-
+            app:layout_constraintTop_toBottomOf="@+id/tv_chat_room_user_name"
             >
             <TextView
                 android:id="@+id/tv_chat_room_message"
@@ -82,11 +106,10 @@
             app:layout_constraintStart_toEndOf="@id/layout_chat_room_message_space"
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="2dp"
-            />
+             />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
