--- a/app/src/main/res/layout/item_person_three_chat_list.xml
+++ b/app/src/main/res/layout/item_person_three_chat_list.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_chat">
+    android:id="@+id/item_chat_list">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -20,7 +20,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/chat_list_round_background"
+            android:background="@drawable/bg_chat_list_round"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/chat_list_round_background"
+            android:background="@drawable/bg_chat_list_round"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             android:translationZ="2dp"
@@ -67,7 +67,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:background="@drawable/chat_list_round_background"
+            android:background="@drawable/bg_chat_list_round"
 
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
