--- a/app/src/main/res/layout/item_right_start_text_chat_room.xml
+++ b/app/src/main/res/layout/item_right_start_text_chat_room.xml
@@ -2,9 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="40dp"
+    android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/item_chat_room">
+    android:id="@+id/item_chat_room"
+    android:layout_marginBottom="5dp">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
