--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_navigation"
-    app:startDestination="@id/navigation_chat">
+    app:startDestination="@id/navigation_chat_list">
 
     <fragment
         android:id="@+id/navigation_signin"
@@ -75,10 +75,13 @@
 
 
     <fragment
-        android:id="@+id/navigation_chat"
+        android:id="@+id/navigation_chat_list"
         android:name="com.sgs.devcamp2.flametalk_android.ui.chatlist.ChatListFragment"
         android:label="Chatlist"
         tools:layout="@layout/fragment_chat_list">
+        <action
+            android:id="@+id/action_navigation_chat_to_chatRoomFragment"
+            app:destination="@id/navigation_chat_room" />
     </fragment>
 
     <fragment
@@ -89,11 +92,18 @@
         >
         <action
             android:id="@+id/action_chat_to_post"
-            app:destination="@id/navigation_chat"
-            app:popUpTo="@id/navigation_chat"/>
+            app:destination="@id/navigation_chat_list"
+            app:popUpTo="@id/navigation_chat_list"/>
     </fragment>
-
-
+    <fragment
+        android:id="@+id/navigation_chat_room"
+        android:name="com.sgs.devcamp2.flametalk_android.ui.chatroom.ChatRoomFragment"
+        android:label="fragment_chat_room"
+        tools:layout="@layout/fragment_chat_room" >
+        <action
+            android:id="@+id/action_chatRoomFragment_to_navigation_oauth"
+            app:destination="@id/navigation_oauth" />
+    </fragment>
 
 
 </navigation>
