--- a/app/src/main/res/layout/fragment_chat_list.xml
+++ b/app/src/main/res/layout/fragment_chat_list.xml
@@ -43,21 +43,36 @@
             android:id="@+id/iv_chat_list_chat"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:layout_constraintEnd_toStartOf="@id/iv_chat_list_setting"
+            app:layout_constraintEnd_toStartOf="@id/layout_chat_list_setting_space"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintWidth_percent="0.13"
             android:src="@drawable/ic_chatting"
             />
-        <ImageView
-            android:id="@+id/iv_chat_list_setting"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/layout_chat_list_setting_space"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintWidth_percent="0.13"
-          />
+            android:padding="10dp"
+            >
+            <ImageView
+                android:id="@+id/iv_chat_list_setting"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:src="@drawable/ic_settings"
+
+                />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 
 
